Testing new colors

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    : https://madimedia.pro               
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Enjoy the Power of Positive Affirmations now! 100% private - no user account, no internet required, no analytics.
+app_description                           : Enjoy the Power of Positive Affirmations now! <br>100% private - no user account, no internet required, no analytics.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -82,10 +82,10 @@ topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.jpg                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#363b3d"
+cover_overlay_color                       : "#000000"
 cover_overlay_transparency                : 0.8
 
-device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
+device_color                              : blue                                     # Set to: blue, black, yellow, coral or white.
 
 body_background_color                     : "#ffffff"
 
@@ -101,7 +101,7 @@ feature_text_color                        : "#666666"
 feature_icons_foreground_color            : "#111DFF"
 feature_icons_background_color            : "#e6e6e6"
 
-social_icons_foreground_color             : "#666666"
+social_icons_foreground_color             : "#111DFF"
 social_icons_background_color             : "#e6e6e6"
 
 footer_text_color                         : "#666666"
