--- a/_config.yml
+++ b/_config.yml
@@ -37,15 +37,15 @@ features                                  :
 
   - title                                 : 100+ positive affirmations in 6 categories
     description                           : Joy, Love, Self Esteem, Success, Health - we've got you covered!  
-    fontawesome_icon_name                 : sparkles
+    fontawesome_icon_name                 : fa-book
     
   - title                                 : Make it your own
     description                           : Edit, delete, add your own, save your favorites... This is your app.
-    fontawesome_icon_name                 : hand-sparkles
+    fontawesome_icon_name                 : fa-heart-o
 
   - title                                 : Timely Notifications
     description                           : Let the app remind you your affirmation throughout the day to get the full effect.
-    fontawesome_icon_name                 : comment-smile
+    fontawesome_icon_name                 : fa-bell-o
 
   - title                                 : Share your affirmations 
     description                           : Send your favorite affirmations to your friends with beautiful imagery.
@@ -53,15 +53,15 @@ features                                  :
 
   - title                                 : Total Privacy
     description                           : Your data is entirely your own. 0 data treated, 0 data collected. Any modification you make is saved locally on your device exclusively.
-    fontawesome_icon_name                 : file-lock
+    fontawesome_icon_name                 : fa-eye-slash
   
   - title                                 : No user account
     description                           : No filling out your email, your full name, the age of your grandma... Just download the app, launch it, you're ready to go!
-    fontawesome_icon_name                 : user-alien
+    fontawesome_icon_name                 : fa-magic
 
   - title                                 : No internet needed
     description                           : Use the app wherever you are, no data plan or signal needed! On a trip, on a desert island... you're set.
-    fontawesome_icon_name                 : cloud-slash
+    fontawesome_icon_name                 : fa-mobile
 
   - title                                 : Available in French and English (US)
     description                           : And more languages to come!
@@ -73,7 +73,7 @@ features                                  :
 
   - title                                 : Dark Mode Support
     description                           : Your app matches your esthetic!
-    fontawesome_icon_name                 : ying-yang
+    fontawesome_icon_name                 : fa-adjust
 
 
 # Theme Settings
@@ -82,7 +82,7 @@ topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.jpg                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#000000"
+cover_overlay_color                       : "#ffffff"
 cover_overlay_transparency                : 0.8
 
 device_color                              : blue                                     # Set to: blue, black, yellow, coral or white.
