--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    : https://madimedia.pro               
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Enjoy the Power of Positive Affirmations now! <br>100% private - no user account, no internet required, no analytics.
+app_description                           : Enjoy the Power of Positive Affirmations now! <br>100% private - no user account, no internet required, no data collected.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -82,7 +82,7 @@ topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.jpg                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#ffffff"
+cover_overlay_color                       : "#55bcef"
 cover_overlay_transparency                : 0.8
 
 device_color                              : blue                                     # Set to: blue, black, yellow, coral or white.
@@ -98,15 +98,13 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#111DFF"
+feature_icons_foreground_color            : "##153cbd"
 feature_icons_background_color            : "#e6e6e6"
 
-social_icons_foreground_color             : "#111DFF"
+social_icons_foreground_color             : "##153cbd"
 social_icons_background_color             : "#e6e6e6"
 
 footer_text_color                         : "#666666"
-
-
 
 
 
