--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,10 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "##153cbd"
+feature_icons_foreground_color            : "#153cbd"
 feature_icons_background_color            : "#e6e6e6"
 
-social_icons_foreground_color             : "##153cbd"
+social_icons_foreground_color             : "#153cbd"
 social_icons_background_color             : "#e6e6e6"
 
 footer_text_color                         : "#666666"
