--- a/_config.yml
+++ b/_config.yml
@@ -41,11 +41,11 @@ features                                  :
     
   - title                                 : Make it your own
     description                           : Edit, delete, add your own, save your favorites... This is your app.
-    fontawesome_icon_name                 : heart-o
+    fontawesome_icon_name                 : heart
 
   - title                                 : Timely Notifications
     description                           : Let the app remind you your affirmation throughout the day to get the full effect.
-    fontawesome_icon_name                 : bell-o
+    fontawesome_icon_name                 : bell
 
   - title                                 : Share your affirmations 
     description                           : Send your favorite affirmations to your friends with beautiful imagery.
@@ -83,7 +83,7 @@ topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.jpg                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#55bcef"
-cover_overlay_transparency                : 0.8
+cover_overlay_transparency                : 0.5
 
 device_color                              : blue                                     # Set to: blue, black, yellow, coral or white.
 
@@ -98,10 +98,10 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#153cbd"
+feature_icons_foreground_color            : "#2EB5EA"
 feature_icons_background_color            : "#e6e6e6"
 
-social_icons_foreground_color             : "#153cbd"
+social_icons_foreground_color             : "#2EB5EA"
 social_icons_background_color             : "#e6e6e6"
 
 footer_text_color                         : "#666666"
