Add widget section

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,10 @@ features                                  :
   - title                                 : Timely Notifications
     description                           : Let the app remind you your affirmation throughout the day to get the full effect.
     fontawesome_icon_name                 : bell
+    
+  - title                                 : Positive Widgets
+    description                           : Pin your daily affirmation to your home screen for a beautiful visual reminder to stay positive.
+    fontawesome_icon_name                 : icon-picture
 
   - title                                 : Share your affirmations 
     description                           : Send your favorite affirmations to your friends with beautiful imagery.
